<resources>
    <string name="selected_language">English</string>
    <string-array name="language">
        <item>English</item>
        <item>Sinhala</item>
    </string-array>
    <string name="app_name">Growth &amp; Nutrition Monitoring System</string>
    <string name="title_activity_login">Log in</string>
    <string name="prompt_server_url">Server url</string>
    <string name="prompt_username">Username</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="invalid_server_url">Not a valid server url</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must have more than 5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="sync_icon">Sync icon</string>
    <string name="item_icon">Icon</string>
    <string name="item_bitmap">Bitmap</string>
    <string name="item_title">Item title</string>
    <string name="item_right_text">12/03 23:05:12</string>
    <string name="item_subtitle_1">Item subtitle 1</string>
    <string name="item_subtitle_2">Item subtitle 2</string>
    <string name="sync">SYNC</string>
    <string name="change_Language">CHANGE LANGUAGE</string>
    <string name="title_activity_main">Home</string>
    <string name="welcome">"Welcome!"</string>
    <string name="lorem_ipsum">"Lorem ipsum dolor sit amet"</string>
    <string name="syncing_metadata">Syncing metadata…</string>
    <string name="syncing_data">Syncing data…</string>
    <string name="sync_metadata">Sync metadata</string>
    <string name="sync_data">Sync data</string>
    <string name="upload_data">Upload data</string>
    <string name="uploading_data">Uploading data…</string>
    <string name="wiping_data">Wiping data…</string>
    <string name="log_out">Log out</string>
    <string name="wipe_data">Wipe data</string>
    <string name="programs">Programs</string>
    <string name="data_sets">Data sets</string>
    <string name="tracked_entity_instances">Tracked entity instances</string>
    <string name="events_without_registration">Events without registration</string>
    <string name="data_values">Data values</string>
    <string name="zero">0</string>
    <string name="title_activity_programs">Your programs</string>
    <string name="program_name">Program Name</string>
    <string name="program_icon">Program Icon</string>
    <string name="program_stages">2 Program stages</string>
    <string name="no_programs_found">No programs found</string>
    <string name="title_activity_tracked_entity_search">Tracked entities search</string>
    <string name="search_data">Search data</string>
    <string name="searching">Searching data…</string>
    <string name="title_activity_tracked_entity_instances">Your tracked entity instances</string>
    <string name="tracked_entity_instance_name">Tracked Entity Instance Name</string>
    <string name="unique_id">1234</string>
    <string name="no_tracked_entity_instances_found">No tracked entity instances found</string>
    <string name="title_activity_events">Events</string>
    <string name="no_events_found">No events found</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">User name</string>
    <string name="nav_header_subtitle">user@email.com</string>
    <string name="data_management">Data management</string>
    <string name="session">Session</string>
    <string name="title_activity_d2_errors">Your errors</string>
    <string name="no_d2_errors_found">No errors found</string>
    <string name="title_activity_fk_violations">Foreign key violations</string>
    <string name="no_fk_violations_found">No foreign key violations found</string>
    <string name="title_activity_data_sets">Your data sets</string>
    <string name="no_data_sets_found">No data sets found</string>
    <string name="title_activity_data_set_instances">Your data set instances</string>
    <string name="no_data_set_instances_found">No data set instances found</string>
    <string name="executing">Executing…</string>
    <string name="code_executed">Code executed</string>
    <string name="waiting_for_execution">Waiting for execution…</string>
    <string name="execute_code">Execute</string>
    <string name="code_executor">Code executor</string>
    <string name="title_activity_enrollment_form">Enrollment form</string>
    <string name="title_activity_event_form">Event form</string>
    <string name="date_button_text">Click here to select date</string>
    <string name="enter_here">Enter here</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="filter_background">filterBackground</string>
    <string name="login_title">MSGP/U5 Monitoring System for Growth Problems in Under 5 Children</string>
    <string name="login_description">Log in to your Account</string>
    <string name="language_selection">Please select the language</string>
    <string name="username"><font size="14">Username</font></string>
    <string name="password"><font size="14">Password</font></string>
    <string name="login">Login</string>
    <string name="select">Select</string>
    <string name="title_activity_home">home</string>
    <string name="wish">Hello,</string>
    <string name="sup_prog"><font size="16">Supplementary Feeding Programme</font></string>
    <string name="thera_prog"><font size="16">Therapeutic Feeding Programme</font></string>
    <string name="overw_prog"><font size="16">Overweight/Obesity Programme</font></string>
    <string name="stunt_prog"><font size="16">Stunting Programme</font></string>
    <string name="other_prog"><font size="16">Other Health/ Non-health Programme</font></string>
    <string name="area_details">View my area details</string>
    <string name="area_details_desc">Click here to view all the child list in your area</string>
    <string name="new_child">Child Registration</string>
    <string name="new_child_desc">Click here to add a new child to programme</string>
    <string name="all_reg"><font size="16">All registrations</font></string>
    <string name="date">Date Not Selected</string>
    <string name="anthro_height">Height value should be between 15-140cm</string>
    <string name="anthro_weight">Weight value should be between 100-40000gram</string>
    <string name="anthro_gn">GN Area is not filled</string>
    <string name="anthro_immune">Birth and Immunization Number is not filled</string>
    <string name="anthro_immune_not_matching">Birth and Immunization Number is not in correct format</string>
    <string name="anthro_name">Name of the child is not filled</string>
    <string name="anthro_dob">Date of Birth is not filled</string>
    <string name="anthro_address">Address is not filled</string>
    <string name="anthro_mom_name">Name of Mother is not filled</string>
    <string name="anthro_mom_dob">Mothers date of birth is not filled</string>
    <string name="anthro_weight_not_filled">Birth weight (in grams) is not filled</string>
    <string name="anthro_length_not_filled">Length at birth (in cm) is not filled</string>
    <string name="anthro_occu">Occupation specification is mandatory is self employed/retired/paid</string>
    <string name="anthro_not_mot">If caregiver is not mother, caregiver name is mandatory</string>
    <string name="anthro_regis_length">Length in Centimeters is allowed 10-99</string>
    <string name="anthro_regis_weight">Weight in Grams is allowed 500-9999</string>
    <string name="anthro_chirdren">Number of Children allowed is 1-20</string>
    <string name="anthro_regis_land_empty">Land Number is not filled</string>
    <string name="anthro_regis_land">Land Number has less/more characters</string>
    <string name="anthro_regis_mobile_empty">Mobile Number is not filled</string>
    <string name="anthro_regis_mobile">Mobile Number has less/more characters</string>
    <string name="anthro_regis_same_BI">Child with same Immunization number already exists in PHM area</string>
    <string name="demo_info_title">Demographic information</string>
    <string name="date_of_reg"><font size="14">Date of registration</font></string>
    <string name="gn_area"><font size="14">GN area (Free text) *</font></string>
    <string name="birth_num"><font size="12">Birth and Immunization Register Number (Free text) *</font></string>
    <string name="name"><font size="12">Name of the child (Free text) *</font></string>
    <string-array name="sex">
        <item>Male</item>
        <item>Female</item>
        <item>Unspecified</item>
    </string-array>
    <string name="date_of_birth"><font size="12">Date of birth *</font></string>
    <string-array name="ethnicity">
        <item>Sinhalese</item>
        <item>Tamil</item>
        <item>Muslim</item>
        <item>Burgher</item>
        <item>Others</item>
    </string-array>
    <string name="addr"><font size="12">Address (Free text) *</font></string>
    <string-array name="sector">
        <item>Rural</item>
        <item>Urban</item>
        <item>Estate</item>
    </string-array>
    <string name="ll_num"><font size="12">Land line number</font></string>
    <string name="mob_num"><font size="12">Mobile number</font></string>
    <string name="mother_info_title">Mother\'s information</string>
    <string name="occup_mother"><font size="12">Occupation *</font></string>
    <string name="name_mother"><font size="12">Name of the mother *</font></string>
    <string name="date_of_birth_mother"><font size="12">Mother\'s date of birth *</font></string>
    <string name="no_of_children"><font size="12">Number of living children including this child</font></string>
    <string name="occu_specifcation"><font size="12">If self employment, paid employment or retired, please specify mother\'s occupation</font></string>
    <string name="edu_level_mother"><font size="12">Highest education level *</font></string>
    <string name="nic_mother"><font size="12">NIC number</font></string>
    <string name="caregiver_title">Care giver\'s information</string>
    <string name="cg_rel"><font size="12">Caregiver\'s relationship to child *</font></string>
    <string name="cg_name"><font size="12">If caregiver is not the mother, caregiver\'s name</font></string>
    <string name="newborn_title">Newborn\'s information</string>
    <string name="birth_len"><font size="12">Length at birth (cm) *</font></string>
    <string name="birth_weight"><font size="12">Weight at birth (grams) *</font></string>
    <string name="submit">Submit</string>
    <string name="an_stage">Stage 1 : Anthropometry</string>
    <string name="st_reason">Reason for enrollment</string>
    <string name="st_risk">Risk factor evaluation</string>
    <string name="st_reff">Referred for intervention</string>
    <string name="st_mana">Stage 1: Management Status</string>
    <string name="st_inter">Intervention</string>
    <string name="st_out">Outcome</string>
    <string name="st_indication">Indication for Thriposha</string>
    <string name="an_title">Stage 1: Anthropometry</string>
    <string name="an_date_enrol"><font size="12">Date of enrollment</font></string>
    <string name="an_date"><font size="12">Date</font></string>
    <string name="an_weight"><font size="12">Weight (grams)</font></string>
    <string name="an_weight_kg"><font size="12">Weight (kg)</font></string>
    <string name="tera_management_title">Stage 1: Management Status</string>
    <string name="tera_management_date">Date</string>
    <string name="tera_management_enrollment">Enrollment type (Dropdown list)</string>
    <string name="tera_management_hospital">Referred to hospital</string>
    <string name="tera_management_seen">Seen by Paediatrician/Hospital Nutrition Clinic</string>
    <string name="tera_management_bp100">Started on BP 100 (Yes/No)</string>
</resources>