<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/pink"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:weightSum="1">

        <ImageView
            android:id="@+id/group16676"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_margin="0dp"
            android:layout_weight="0.8"
            android:scaleType="fitXY"
            android:src="@drawable/maskgroup62" />

        <TextView
            android:id="@+id/title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/login_title"
            android:textAlignment="center"
            android:textColor="@color/title"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/login_description"
            android:textAlignment="center"
            android:textColor="@color/desc"
            android:textSize="17dp" />

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/username_yash"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginHorizontal="40dp"
            android:layout_marginVertical="10dp"
            android:background="@drawable/background_edit_text"
            android:hint="@string/username"
            android:inputType="text"
            android:paddingHorizontal="20dp"
            android:paddingVertical="13dp"
            android:textColor="@color/black"
            android:textColorHint="@color/desc" />

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/password_yash"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginHorizontal="40dp"
            android:layout_marginVertical="10dp"
            android:background="@drawable/background_edit_text"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:paddingHorizontal="20dp"
            android:paddingVertical="13dp"
            android:textColor="@color/black"
            android:textColorHint="@color/desc" />

        <Button
            android:id="@+id/btnLogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginHorizontal="60dp"
            android:layout_marginVertical="0dp"
            android:background="@drawable/background_button"

            android:text="@string/login"
            android:textAllCaps="false"
            android:textSize="18dp" />

    </LinearLayout>
</RelativeLayout>