<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:weightSum="1"
        android:orientation="vertical">

        <ImageView
            android:layout_weight="0.13"
            android:id="@+id/back_img"
            android:scaleType="fitXY"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:src="@drawable/group16682" />

        <ScrollView
            android:layout_width="fill_parent"
            android:layout_height="0dp"
            android:layout_weight="0.6">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="16dp"
                android:layout_marginTop="5dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="60dp"
                        android:layout_marginHorizontal="5dp"
                        android:layout_marginVertical="5dp"
                        android:layout_weight="1"
                        android:background="@drawable/background_popup_card"
                        android:orientation="horizontal"
                        android:paddingHorizontal="8dp"
                        android:paddingVertical="8dp"
                        android:weightSum="1">

                        <TextView
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:layout_gravity="center"
                            android:layout_weight="0.4"
                            android:background="@null"
                            android:text="@string/tera_management_date"
                            android:textColorHint="@color/desc" />

                        <TextView
                            android:id="@+id/editTextDateTherapeuticManagement"
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:layout_gravity="center"
                            android:layout_weight="0.4"
                            android:background="@null"

                            android:textColorHint="@color/desc" />

                        <ImageView
                            android:id="@+id/therapeutic_date_pick"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_vertical"
                            android:layout_weight="0.2"
                            android:background="@drawable/background_popup_card"
                            android:src="@drawable/calendar" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="60dp"
                        android:layout_marginHorizontal="5dp"
                        android:layout_marginVertical="5dp"
                        android:layout_weight="1"
                        android:background="@drawable/background_popup_card"
                        android:orientation="horizontal"
                        android:paddingHorizontal="8dp"
                        android:paddingVertical="8dp"
                        android:weightSum="1">

                        <TextView
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:layout_gravity="center"
                            android:layout_weight="0.5"
                            android:background="@null"
                            android:text="@string/tera_management_enrollment"
                            android:textColorHint="@color/desc" />

                        <Spinner
                            android:id="@+id/therapeutic_management_Enrollment_spinner"
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:layout_weight="0.5">

                        </Spinner>


                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="60dp"
                        android:layout_marginHorizontal="5dp"
                        android:layout_marginVertical="5dp"
                        android:layout_weight="1"
                        android:background="@drawable/background_popup_card"
                        android:orientation="horizontal"
                        android:paddingHorizontal="8dp"
                        android:paddingVertical="8dp"
                        android:weightSum="1">

                        <TextView
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:layout_gravity="center"
                            android:layout_weight="0.5"
                            android:background="@null"
                            android:text="@string/tera_management_hospital"
                            android:textColorHint="@color/desc" />

                        <RadioGroup
                            android:id="@+id/radioGroupTherapeuticHospital"
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:layout_gravity="center"
                            android:layout_weight="0.5"
                            android:background="@null"
                            android:orientation="horizontal"
                            android:textColorHint="@color/desc">

                            <RadioButton
                                android:id="@+id/radioButtonTherapeuticHospitalYes"
                                android:layout_width="0dp"
                                android:layout_height="55dp"
                                android:layout_gravity="center_horizontal"
                                android:layout_weight="0.5"
                                android:checked="false"
                                android:text="@string/yes"
                                android:textSize="15sp" />

                            <RadioButton
                                android:id="@+id/radioButtonTherapeuticHospitalNo"
                                android:layout_width="0dp"
                                android:layout_height="55dp"
                                android:layout_gravity="center_horizontal"
                                android:layout_weight="0.5"
                                android:checked="false"
                                android:text="@string/no"
                                android:textSize="15sp" />

                        </RadioGroup>


                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginHorizontal="5dp"
                        android:layout_marginVertical="5dp"
                        android:layout_weight="1"
                        android:background="@drawable/background_popup_card"
                        android:orientation="horizontal"
                        android:paddingHorizontal="8dp"
                        android:paddingVertical="8dp"
                        android:weightSum="1">

                        <TextView
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:layout_gravity="center"
                            android:layout_weight="0.5"
                            android:background="@null"
                            android:text="@string/tera_management_seen"
                            android:textColorHint="@color/desc" />

                        <RadioGroup
                            android:id="@+id/radioGroupTherapeuticPaediatrician"
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:layout_gravity="center"
                            android:layout_weight="0.5"
                            android:background="@null"
                            android:orientation="horizontal"
                            android:textColorHint="@color/desc">

                            <RadioButton
                                android:id="@+id/radioButtonTherapeuticPaediatricianYes"
                                android:layout_width="0dp"
                                android:layout_height="55dp"
                                android:layout_gravity="center_horizontal"
                                android:layout_weight="0.5"
                                android:checked="false"
                                android:text="@string/yes"
                                android:textSize="15sp" />

                            <RadioButton
                                android:id="@+id/radioButtonTherapeuticPaediatricianNo"
                                android:layout_width="0dp"
                                android:layout_height="55dp"
                                android:layout_gravity="center_horizontal"
                                android:layout_weight="0.5"
                                android:checked="false"
                                android:text="@string/no"
                                android:textSize="15sp" />

                        </RadioGroup>


                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginHorizontal="5dp"
                        android:layout_marginVertical="5dp"
                        android:layout_weight="1"
                        android:background="@drawable/background_popup_card"
                        android:orientation="horizontal"
                        android:paddingHorizontal="8dp"
                        android:paddingVertical="8dp"
                        android:weightSum="1">

                        <TextView
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:layout_gravity="center"
                            android:layout_weight="0.5"
                            android:background="@null"
                            android:text="@string/tera_management_bp100"
                            android:textColorHint="@color/desc" />

                        <RadioGroup
                            android:id="@+id/radioGroupTherapeuticBP100"
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:layout_gravity="center"
                            android:layout_weight="0.5"
                            android:background="@null"
                            android:orientation="horizontal"
                            android:textColorHint="@color/desc">

                            <RadioButton
                                android:id="@+id/radioButtonTherapeuticBP100Yes"
                                android:layout_width="0dp"
                                android:layout_height="55dp"
                                android:layout_gravity="center_horizontal"
                                android:layout_weight="0.5"
                                android:checked="false"
                                android:text="@string/yes"
                                android:textSize="15sp" />

                            <RadioButton
                                android:id="@+id/radioButtonTherapeuticBP100No"
                                android:layout_width="0dp"
                                android:layout_height="55dp"
                                android:layout_gravity="center_horizontal"
                                android:layout_weight="0.5"
                                android:checked="false"
                                android:text="@string/no"
                                android:textSize="15sp" />

                        </RadioGroup>


                    </LinearLayout>

                </LinearLayout>

            </RelativeLayout>
        </ScrollView>

    </LinearLayout>

    <Button
        android:id="@+id/therapeuticManagementSave"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:textSize="18dp"
        android:layout_marginVertical="30dp"
        android:layout_marginHorizontal="60dp"
        app:layout_constraintBottom_toBottomOf="parent"
        android:background="@drawable/background_button"
        android:textAllCaps="false"
        android:text="@string/submit" />

    <RelativeLayout
        android:id="@+id/view1"
        android:paddingHorizontal="16dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingTop="30dp">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginVertical="10dp"
                android:orientation="horizontal">

                <!--
                <ImageButton
                    android:id="@+id/back_btn"
                    android:layout_width="36dp"
                    android:layout_height="36dp"
                    android:layout_alignParentStart="true"
                    android:layout_marginStart="10dp"
                    android:background="@drawable/background_back_btn"
                    android:clickable="true"
                    android:focusable="true"
                    android:padding="10dp"
                    android:src="@drawable/back" />
                    -->

                <TextView
                    android:id="@+id/title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/tera_management_title"
                    android:textAlignment="center"
                    android:textColor="@color/title"
                    android:textSize="20sp"
                    android:textStyle="bold" />

            </RelativeLayout>
        </LinearLayout>
    </RelativeLayout>
</androidx.constraintlayout.widget.ConstraintLayout>